# cpp_vcpkg_project

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Features.cmake  Taskfile.yml  cspell.config.yaml  vcpkg.json
.github/workflows/: auto-clang-format.yml  ci.yml
cmake/: EnumOption.cmake  MoreProjectOptions.cmake  PreventInSourceBuilds.cmake
config/: Version.h.in
docker/: Dockerfile  DockerfileDebug  DockerfileMisc  DockerfileRelease  DockerfileWindows  docker-compose-debug.yml  docker-compose-release.yml  docker-compose-windows.yml  docker-compose.yml
src/: CMakeLists.txt
src/my_exe/: CMakeLists.txt
src/my_exe/test/: CMakeLists.txt  tests.cpp
src/my_header_lib/: CMakeLists.txt
src/my_header_lib/test/: CMakeLists.txt  tests.cpp
src/my_header_lib/test/constexpr/: CMakeLists.txt  constexpr_tests.cpp
src/my_lib/test/: CMakeLists.txt  tests.cpp
src/my_lib/test/constexpr/: CMakeLists.txt  constexpr_tests.cpp
taskfiles/: Docker.yml  Taskfile_windows.yml
